# telos-consensus-client

./: .gitignore  Cargo.toml  build.sh  config-example.toml  example-config.toml  example-config.yml  start.sh  stop.sh
.github/workflows/: build_lint_test.yml
client/: Cargo.toml  config-example.toml  default.nix
client/scripts/: stop.sh
client/src/: auth.rs  client.rs  config.rs  data.rs  execution_api_client.rs  json_rpc.rs  lib.rs  main.rs  main_utils.rs
client/tests/: ship_read.rs
scripts/: build.sh  run.sh  start.sh  stop.sh
src/: arrow_block_reader.rs  auth.rs  block.rs  block_deserializer.rs  block_reader.rs  client.rs  config.rs  data.rs  evm_block_generator.rs  execution_api_client.rs  json_rpc.rs  lib.rs  main.rs  sequential_block_reader.rs  test_utils.rs  transaction.rs  translator.rs
src/rlp/: alloy_rlp.rs  decode.rs  mod.rs  telos_rlp.rs  telos_rlp_decode.rs
src/tasks/: block_orderer.rs  evm_block_generator.rs  evm_block_processor.rs  final_processor.rs  mod.rs  raw_deserializer.rs  ship_reader.rs
src/types/: env.rs  evm_types.rs  mod.rs  names.rs  ship_types.rs  translator_types.rs  types.rs
tests/: block_headers.rs  compare.rs  decode_block.rs  mock_fork.rs  read_ship.rs  rlp.rs  ship_read.rs  transactions.rs
tests/common/: test_utils.rs  testcontainer-actions-v1.5.json  testcontainer-deltas-v1.5.json
translator/: Cargo.toml  diagram.txt  example-config.toml
translator/src/: block.rs  injection.rs  lib.rs  main.rs  transaction.rs  translator.rs
translator/src/rlp/: mod.rs  telos_rlp_decode.rs
translator/src/tasks/: evm_block_processor.rs  final_processor.rs  raw_deserializer.rs  ship_reader.rs
translator/src/types/: env.rs  evm_types.rs  mod.rs  names.rs  ship_abi.json  ship_types.rs  translator_types.rs
translator/tests/: block_headers.rs  decode_block.rs  mock_fork.rs  nodeos_table_dump.rs  rlp.rs  ship_debug.rs  ship_read.rs  transactions.rs
translator/tests/common/: testcontainer-actions-v1.5.json
