[package]
name = "telos-consensus-client"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
log = "0.4"
env_logger = "0.10"
#telos-translator-rs = { path = "../../telos/telos-translator-rs" }
telos-translator-rs = { git = "https://github.com/telosnetwork/telos-translator-rs.git", branch = "use-stop-signal-externaly" }

reth-primitives = { git = "https://github.com/telosnetwork/telos-reth", branch = "telos-main" }
reth-rpc-types = { git = "https://github.com/telosnetwork/telos-reth", branch = "telos-main" }
csv = "1.3.0"
chrono = "0.4.33"
eyre = "0.6.5"
reqwest = {  version = "0.11.23", features = ["json"] }
clap = {  version = "4.4.18", features = ["derive"] }
serde = { version = "1.0.196", features = ["derive"] }
toml = "0.8.8"
rand = "0.8.5"
zeroize = "1.7.0"
tokio = { version = "1.35.1", features = ["full"] }
hex = "0.4.3"
jsonwebtoken = "9.2.0"
serde_json = "1.0.111"
alloy = "0.2.1"
alloy-rlp = "0.3"
alloy-consensus = "0.2.1"
arrowbatch = "1.14.0"
base64 = "0.22.1"
antelope-client = { git = "https://github.com/telosnetwork/antelope-rs", branch = "serialization" }
thiserror = "1.0.62"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
futures = "0.3.30"
bytes = "1.7.1"

[dev-dependencies]
axum = "0.7.5"
testcontainers = "0.21.1"

[features]
bad_sig_padding = ["telos-translator-rs/bad_sig_padding"]