[workspace]
members = [
	"client",
	"translator"
]
default-members = ["client"]
resolver = "2"

[workspace.package]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
reth-primitives = { git = "https://github.com/telosnetwork/telos-reth", branch = "telos-main" }
reth-rpc-types  = { git = "https://github.com/telosnetwork/telos-reth.git", branch = "telos-main" }
alloy = "0.2.1"
alloy-rlp = "0.3"
alloy-consensus = "0.2.1"
antelope-client = { git = "https://github.com/telosnetwork/antelope-rs.git", branch = "development" }
bytes = "1.7.1"
clap = { version = "4.5.6", features = ["derive"] }
serde = { version = "1.0.196", features = ["derive"] }
eyre = "0.6.5"
serde_json = "1.0.117"
tokio = { version = "1.38.0" }
toml = "0.8.8"
tracing = "0.1.40"
tracing-subscriber = "0.3.1"
hex = "0.4.3"
futures = "0.3.30"
bytes = "1.7.1"
rocksdb = "0.22.0"
tokio-retry = "0.3"

