[package]
name = "telos-consensus-client"
version = "0.1.0"
edition = "2021"

[dependencies]
telos-translator-rs = { workspace = true }
reth-primitives = { workspace = true }
reth-rpc-types = { workspace = true }
alloy = { workspace = true }
alloy-rlp = { workspace = true }
alloy-consensus = { workspace = true }
antelope-client = { workspace = true }
bytes = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
eyre = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
hex = { workspace = true }
futures = "0.3.30"
csv = "1.3.0"
rocksdb = "0.22.0"
chrono = "0.4.33"
reqwest = {  version = "0.11.23", features = ["json"] }
rand = "0.8.5"
zeroize = "1.7.0"
jsonwebtoken = "9.2.0"
arrowbatch = "1.14.0"
base64 = "0.22.1"
thiserror = "1.0.62"
tokio-retry = "0.3.0"


[dev-dependencies]
testcontainers = { workspace = true }

axum = "0.7.5"

[features]
bad_sig_padding = ["telos-translator-rs/bad_sig_padding"]
