[package]
name = "telos-translator-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reth-primitives = { workspace = true }
reth-rpc-types  = { workspace = true }
alloy = { workspace = true }
alloy-rlp = { workspace = true }
alloy-eips = { workspace = true }
alloy-consensus = { workspace = true }
antelope-client = { workspace = true }
bytes = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
eyre = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros"] }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
hex = { workspace = true }
reth-trie-common = { workspace = true }
reth-telos-rpc-engine-api = { workspace = true }
num-bigint = "0.4.5"
dashmap = "5.5.3"
k256 = { version = "0.13.3", features = ["ecdsa"] }
moka = { version = "0.12.7", features = ["sync"] }
tokio-tungstenite = "0.23.0"
futures-util = "0.3.30"
ruint = "0.3.0"
rlp = "0.5.2"
lazy_static = "1.5.0"


#alloy = { version = "0.2.1", features = ["k256"] }

[dev-dependencies]
testcontainers = { workspace = true }

async-trait = "0.1.80"
chrono = "0.4.38"
num-traits = "0.2.19"
reqwest = { version = "0.12.5", features = ["json"] }
thiserror = "1.0.63"

[features]
bad_sig_padding = []
